[gd_scene load_steps=8 format=3 uid="uid://3hso8cn4h0xh"]

[ext_resource type="Script" uid="uid://dmkise6xg1gfj" path="res://Scripts/options_menu.gd" id="1_5v8ap"]

[sub_resource type="LabelSettings" id="LabelSettings_q2qps"]
font_size = 64

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4obfb"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_4obfb"]
size = Vector2(400, 100)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w31pl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekrfg"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_q2qps"]
size = Vector2(500, 200)

[node name="Options" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5v8ap")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -450.0
offset_right = 450.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/side_margin = 0
theme_override_font_sizes/font_size = 64
current_tab = 0

[node name="General" type="Panel" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Buttons and Title" type="VBoxContainer" parent="TabContainer/General"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -400.0
offset_right = 450.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="General" type="Label" parent="TabContainer/General/Buttons and Title"]
layout_mode = 2
text = "General"
label_settings = SubResource("LabelSettings_q2qps")
horizontal_alignment = 1
vertical_alignment = 1
paragraph_separator = "\\"

[node name="Fullscreen" type="Button" parent="TabContainer/General/Buttons and Title"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_4obfb")
text = "Fullsceen"
icon = SubResource("PlaceholderTexture2D_4obfb")
flat = true
icon_alignment = 1

[node name="Maximized" type="Button" parent="TabContainer/General/Buttons and Title"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_w31pl")
text = "Maximized"
icon = SubResource("PlaceholderTexture2D_4obfb")
flat = true
icon_alignment = 1

[node name="Windowed" type="Button" parent="TabContainer/General/Buttons and Title"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekrfg")
text = "Windowed"
icon = SubResource("PlaceholderTexture2D_4obfb")
flat = true
icon_alignment = 1

[node name="Exit Game" type="Button" parent="TabContainer/General/Buttons and Title"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekrfg")
toggle_mode = true
button_pressed = true
text = "Exit Game"
icon = SubResource("PlaceholderTexture2D_4obfb")
flat = true
icon_alignment = 1

[node name="Credits" type="Panel" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Credits" type="RichTextLabel" parent="TabContainer/Credits"]
layout_mode = 0
offset_right = 900.0
offset_bottom = 805.0
theme_override_font_sizes/bold_italics_font_size = 50
theme_override_font_sizes/italics_font_size = 50
theme_override_font_sizes/mono_font_size = 50
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 50
text = "Credits
--
Geraldu

Mcavazotti

Popstel

Rover-N"
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1
drag_and_drop_selection_enabled = false

[node name="Return" type="Panel" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Return" type="Button" parent="TabContainer/Return"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -54.0
offset_right = 204.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Return to Game"
icon = SubResource("PlaceholderTexture2D_q2qps")
flat = true
icon_alignment = 1

[connection signal="pressed" from="TabContainer/General/Buttons and Title/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="TabContainer/General/Buttons and Title/Maximized" to="." method="_on_maximized_pressed"]
[connection signal="pressed" from="TabContainer/General/Buttons and Title/Windowed" to="." method="_on_windowed_pressed"]
[connection signal="pressed" from="TabContainer/General/Buttons and Title/Exit Game" to="." method="_on_exit_game_pressed"]
[connection signal="pressed" from="TabContainer/Return/Return" to="." method="_on_return_pressed"]
